transform codebase with spotless

--- a/boot/src/main/resources/application-dev.properties
+++ b/boot/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@ spring.config.import=file:.env[.properties]
 
 server.port=8000
 server.error.whitelabel.enabled=false
-spring.servlet.multipart.max-file-size=128KB
-spring.servlet.multipart.max-request-size=128KB
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
 spring.mvc.format.date-time=iso
 spring.jackson.serialization.write-dates-as-timestamps=true
 spring.jackson.default-property-inclusion=non-null
