oauth2 authentication support: sign-up with google (with googleapis)

--- a/boot/src/main/resources/application-dev.properties
+++ b/boot/src/main/resources/application-dev.properties
@@ -25,3 +25,7 @@ spring.security.accessTokenSecret=${ACCESS_TOKEN_SECRET}
 spring.security.accessTokenTtl=${ACCESS_TOKEN_TTL}
 spring.security.refreshTokenSecret=${REFRESH_TOKEN_SECRET}
 spring.security.refreshTokenTtl=${REFRESH_TOKEN_TTL}
+
+spring.security.gapi.clientId=${GAPI_CLIENT_ID}
+spring.security.gapi.clientSecret=${GAPI_CLIENT_SECRET}
+spring.security.gapi.redirectUrl=${GAPI_REDIRECT_URL}
