--- a/boot/.env.example
+++ b/boot/.env.example
@@ -7,3 +7,7 @@ ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_TTL=
 REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_TTL=
+
+GAPI_CLIENT_ID=
+GAPI_CLIENT_SECRET=
+GAPI_REDIRECT_URL=
