oauth2 authentication support: sign-up via google (with googleapis and oauth client)

--- a/boot/src/main/resources/application-dev.properties
+++ b/boot/src/main/resources/application-dev.properties
@@ -21,6 +21,16 @@ spring.datasource.hikari.maxLifetime=1800000
 spring.sql.init.mode=never
 spring.sql.init.data-locations=classpath:script.sql
 
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.registration.google.client-id=${GAPI_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GAPI_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri=${GAPI_OAUTH2_REDIRECT_URL}
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
 spring.security.accessTokenSecret=${ACCESS_TOKEN_SECRET}
 spring.security.accessTokenTtl=${ACCESS_TOKEN_TTL}
 spring.security.refreshTokenSecret=${REFRESH_TOKEN_SECRET}
